[project]
name = "study-notes"
version = "0.1.0"
description = "my own project for private study."
authors = [
    {name = "kentosoccer0502",email = "kentosoccer0502@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown (>=3.10,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
